# rust_todo_app

./: .env.e2e  .gitignore  Cargo.toml  README.md  docker-compose.e2e.yml  docker-compose.yml
.github/workflows/: ci.yml
api/: Cargo.toml  Dockerfile
api/src/: handlers.rs  lib.rs  main.rs  models.rs  store.rs
api/src/application/: errors.rs  mod.rs
api/src/application/ports/: todo_repository.rs
api/src/application/usecases/todo/: create.rs  delete.rs  get.rs  list.rs  mod.rs  reorder.rs  update.rs
api/src/domain/entities/: todo.rs
api/src/infrastructure/persistence/: db_todo.rs  mod.rs  sqlite_todo_repo.rs
api/src/presentation/dto/: mod.rs  todo_requests.rs  todo_responses.rs
api/tests/: integration_test.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: todo.spec.ts
frontend/src/actions/: todo.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: SortableTodoItem.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/lib/: api.ts
frontend/src/types/: todo.ts
scripts/: run-e2e.sh
src/: handlers.rs  lib.rs  main.rs  models.rs  store.rs
tests/: integration_test.rs
