[package]
name = "rust_todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
